--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,12 @@ form button {
     padding: 2%;
 }
 
+ul {
+    height: 300px;
+    overflow: visible;
+    overflow: scroll;
+}
+
 #messages {
     list-style-type: none;
     margin: 0;
